--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="/favIcon_ZAP.png" type="image/x-icon">
+    <link rel="icon" href="/ZAP-Food_King/favIcon_ZAP.png" type="image/x-icon">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -34,7 +34,7 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">Restaurents</a>
+              <a class="nav-link" href="/ZAP-Food_King/about.html">Restaurents</a>
             </li>
             <li class="nav-item dropdown">
               <a
