--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="/favIcon_ZAP.png" type="image/x-icon">
+    <link rel="icon" href="/ZAP-Food_King/favIcon_ZAP.png" type="image/x-icon">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -34,7 +34,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">Restaurents</a>
+              <a class="nav-link" href="/ZAP-Food_King/about.html">Restaurents</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -57,7 +57,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/ZAP-Food-King/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -279,7 +279,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div style="height: 500px; overflow: hidden;">
-            <img src="/Img_Pizza1.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
+            <img src="/ZAP-Food_King/Img_Pizza1.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
           </div>
           <div class="carousel-caption d-none d-md-block">
             <h3>Welcome to ZAP</h3>
@@ -291,7 +291,7 @@
         </div>
         <div class="carousel-item">
           <div style="height: 500px; overflow: hidden;">
-            <img src="/Img_Biriyani.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
+            <img src="/ZAP-Food_King/Img_Biriyani.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
           </div>
           <div class="carousel-caption d-none d-md-block">
             <h3>Biriyani, Love At First Bite</h3>
@@ -303,7 +303,7 @@
         </div>
         <div class="carousel-item">
           <div style="height: 500px; overflow: hidden;">
-            <img src="/Img_Burger.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
+            <img src="ZAP-Food_King/Img_Burger.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
           </div>
           <div class="carousel-caption d-none d-md-block">
             <div>
@@ -343,7 +343,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card" >
-              <img src="/Img_Paneer.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_King/Img_Paneer.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Paneer Tikka Masala</h5>
                 <p class="card-text">Paneer Tikka Masala features grilled marinated paneer cubes in a rich, spiced tomato gravy. Creamy and flavorful, it’s a beloved vegetarian dish, perfect with naan or rice.</p>
@@ -353,7 +353,7 @@
           </div>
           <div class="col">
             <div class="card" >
-              <img src="/Img_Pasta.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_king/Img_Pasta.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">White Sause Pasta</h5>
                 <p class="card-text">White Sauce Pasta features al dente pasta tossed in a rich, creamy béchamel sauce, infused with garlic and herbs. This comforting dish is indulgent and satisfying, making it a favorite for pasta lovers.</p>
@@ -363,7 +363,7 @@
           </div>
           <div class="col">
             <div class="card" >
-              <img src="/Img_Burger.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_King/Img_Burger.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Veg Burger</h5>
                 <p class="card-text">The Burger is a hearty classic featuring a juicy patty, perfectly grilled and served in a soft bun. Topped with fresh lettuce, tomatoes, and a choice of sauces, it offers a delicious blend of flavors and textures.</p>
@@ -374,7 +374,7 @@
   
           <div class="col">
             <div class="card" >
-              <img src="/Img_Biriyani.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_king/Img_Biriyani.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Chicken Biriyani</h5>
                 <p class="card-text">
@@ -385,7 +385,7 @@
           </div>
           <div class="col">
             <div class="card" >
-              <img src="/Img_salad.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_king/Img_salad.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Vegetable Salad</h5>
                 <p class="card-text">
@@ -396,7 +396,7 @@
           </div>
           <div class="col">
             <div class="card" >
-              <img src="/Img_CB2.webp" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_king/Img_CB2.webp" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Chole Bhature</h5>
                 <p class="card-text">
@@ -408,7 +408,7 @@
   
           <div class="col">
             <div class="card" >
-              <img src="/Img_salad.jpg" class="card-img-top" alt="...">
+              <img src="/ZAP-Food_king/Img_salad.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card with stretched link</h5>
                 <p class="card-text">The Salad is a crisp mix of fresh vegetables tossed in a light dressing. Bursting with flavor and nutrients, it’s a refreshing side or a healthy stand-alone option. The Salad features a vibrant mix of fresh veggies.</p>
@@ -418,7 +418,7 @@
           </div>
           <div class="col">
             <div class="card" >
-              <img src="/Img_Noodles.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_king/Img_Noodles.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Hakka Noodles</h5>
                 <p class="card-text">
@@ -429,7 +429,7 @@
           </div>
           <div class="col">
             <div class="card" >
-              <img src="/Img_Burger.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="/ZAP-Food_king/Img_Burger.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Chicken Burger</h5>
                 <p class="card-text">The Burger is a hearty classic featuring a juicy patty, perfectly grilled and served in a soft bun. Topped with fresh lettuce, tomatoes, and a choice of sauces, it offers a delicious blend of flavors and textures.</p>
