--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="/favIcon_ZAP.png" type="image/x-icon" />
+    <link rel="icon" href="/ZAP-Food_king/favIcon_ZAP.png" type="image/x-icon" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -31,10 +31,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/ZAP-Food_king/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">Restaurents</a>
+              <a class="nav-link active" href="/ZAP-Food_king/about.html">Restaurents</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -57,7 +57,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/ZAP-Food_king/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-lg-4">
           <img
-            src="/avatar1.png"
+            src="/ZAP-Food_king/avatar1.png"
             alt=""
             class="bd-placeholder-img rounded-circle"
             width="140"
@@ -99,7 +99,7 @@
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img
-            src="/avatar3.png"
+            src="/ZAP-Food_king/avatar3.png"
             alt=""
             class="bd-placeholder-img rounded-circle"
             width="140"
@@ -117,7 +117,7 @@
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img
-            src="/avatar2.png"
+            src="/ZAP-Food_king/avatar2.png"
             alt=""
             class="bd-placeholder-img rounded-circle"
             width="140"
@@ -160,7 +160,7 @@
         </div>
         <div class="col-md-5">
           <img
-            src="/Img_Haldirams.jpg"
+            src="/ZAP-Food_king/Img_Haldirams.jpg"
             alt=""
             class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
             width="500"
@@ -197,7 +197,7 @@
         </div>
         <div class="col-md-5 order-md-1">
           <img
-            src="/Img_Restaurent1.jpg"
+            src="/ZAP-Food_king/Img_Restaurent1.jpg"
             alt=""
             class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
             width="500"
@@ -230,7 +230,7 @@
         </div>
         <div class="col-md-5">
           <img
-            src="/Img_Restaurent2.jpg"
+            src="/ZAP-Food_king/Img_Restaurent2.jpg"
             alt=""
             class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
             width="500"
