--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/ZAP-Food_king">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ZAP-Food_King/about.html">Restaurents</a>
@@ -303,7 +303,7 @@
         </div>
         <div class="carousel-item">
           <div style="height: 500px; overflow: hidden;">
-            <img src="ZAP-Food_King/Img_Burger.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
+            <img src="/ZAP-Food_King/Img_Burger.jpg" class="d-block w-100" alt="Pizza" style="height: 100%; object-fit: cover;" />
           </div>
           <div class="carousel-caption d-none d-md-block">
             <div>
@@ -440,114 +440,6 @@
         </div>
       </div>
     </div>
-
-    <!-- <div class="container my-4">
-      <div class="row mb-2">
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-primary">World</strong>
-              <h3 class="mb-0">Global Coding Conferene</h3>
-              <div class="mb-1 text-body-secondary">From Oct 4</div>
-              <p class="card-text mb-auto">
-                Get the basic idea of Coding conferences & contest.
-              </p>
-              <a href="#" class="stretched-link">Conferene Recording</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img
-                src="thumb_1.jpeg"
-                alt=""
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-success">Work</strong>
-              <h3 class="mb-0">Group Discussion & Team Work</h3>
-              <div class="mb-1 text-body-secondary">8th Dec</div>
-              <p class="mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
-              </p>
-              <a href="#" class="stretched-link">Meeting Reports</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img
-                src="thumb_2.jpg"
-                alt=""
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container my-4">
-      <div class="row mb-2">
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-warning">Coding</strong>
-              <h3 class="mb-0">Hackathons</h3>
-              <div class="mb-1 text-body-secondary">From Oct 4</div>
-              <p class="card-text mb-auto">
-                This section is about Hackathons where basically people or any
-                team build some amazing tech-product in the given time period.
-              </p>
-              <a href="#" class="stretched-link">Link to Github</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img
-                src="thumb_3.jpeg"
-                alt=""
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-success">Web-Development</strong>
-              <h3 class="mb-0">Learn Web-Designing</h3>
-              <div class="mb-1 text-body-secondary">8th Dec</div>
-              <p class="mb-auto">
-                Here we will explore the world of Web-designing & User
-                Interface.
-              </p>
-              <a href="#" class="stretched-link">Read More About front-end</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img
-                src="thumb_4.jpeg"
-                alt=""
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <!-- Footer Section -->
     <footer class="container py-5">
