--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/ZAP-Food_King/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ZAP-Food_King/about.html">Restaurents</a>
@@ -57,7 +57,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">Contact Us</a>
+              <a class="nav-link active" href="/ZAP-Food_King/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
